generator client {
  provider   = "prisma-client-js"
  engineType = "binary"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Tenant {
  id                   String                @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name                 String
  domain               String                @unique
  apiKey               String                @unique
  status               TenantStatus          @default(ACTIVE)
  createdAt            DateTime              @default(now())
  updatedAt            DateTime              @updatedAt
  users                User[]
  PasswordToken        PasswordToken[]
  products             Product[]
  sales                Sales[]
  carts                Cart[]
  discounts            Discount[]
  revenue              Payments[]
  deliveries           Delivery[]
  tenantEmailConfig    TenantEmailConfig?
  tenantFinecoreConfig TenantFinecoreConfig?
  subscribers          Subscriber[]
  lists                List[]
  campaigns            Campaign[]
  emailSends           EmailSend[]
  projects             Project[]
  auditLogs            AuditLog[]
  teamInvites          TeamInvite[]
  settings             TenantSettings?
  notifications         Notification[]
  notificationTemplates NotificationTemplate[]

  @@index([name, domain])
}

model TenantFinecoreConfig {
  id            String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  apiKey        String
  publicKey     String?
  webhookSecret String?
  environment   String   @default("sandbox")
  tenant_id     String   @unique @db.Uuid
  tenant        Tenant   @relation(fields: [tenant_id], references: [id])
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model TenantEmailConfig {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  fromName  String
  fromEmail String
  smtpHost  String
  smtpPort  Int
  smtpUser  String
  smtpPass  String
  tenant_id String   @unique @db.Uuid
  tenant    Tenant   @relation(fields: [tenant_id], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Subscriber {
  id        String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant_id String           @db.Uuid
  email     String
  name      String?
  status    SubscriberStatus @default(ACTIVE)
  createdAt DateTime         @default(now())
  tenant    Tenant           @relation(fields: [tenant_id], references: [id])
  lists     ListSubscriber[]
  sends     EmailSend[]

  @@unique([tenant_id, email])
}

model List {
  id          String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant_id   String           @db.Uuid
  name        String
  createdAt   DateTime         @default(now())
  tenant      Tenant           @relation(fields: [tenant_id], references: [id])
  subscribers ListSubscriber[]
}

model ListSubscriber {
  listId       String     @db.Uuid
  subscriberId String     @db.Uuid
  list         List       @relation(fields: [listId], references: [id], onDelete: Cascade)
  subscriber   Subscriber @relation(fields: [subscriberId], references: [id], onDelete: Cascade)

  @@id([listId, subscriberId])
}

model Campaign {
  id          String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant_id   String         @db.Uuid
  subject     String
  htmlBody    String
  textBody    String?
  status      CampaignStatus @default(DRAFT)
  scheduledAt DateTime?
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  tenant      Tenant         @relation(fields: [tenant_id], references: [id])
  sends       EmailSend[]
}

model EmailSend {
  id           String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant_id    String          @db.Uuid
  campaignId   String          @db.Uuid
  subscriberId String          @db.Uuid
  status       EmailSendStatus @default(PENDING)
  error        String?
  sentAt       DateTime?
  tenant       Tenant          @relation(fields: [tenant_id], references: [id])
  campaign     Campaign        @relation(fields: [campaignId], references: [id])
  subscriber   Subscriber      @relation(fields: [subscriberId], references: [id])

  @@unique([campaignId, subscriberId])
}

model User {
  id            String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant_id     String          @db.Uuid
  tenant        Tenant          @relation(fields: [tenant_id], references: [id])
  email         String
  name          String?
  password      String
  phone         String?
  role          Role            @default(USER)
  agreed        Boolean?        @default(false)
  createdAt     DateTime        @default(now())
  updatedAt     DateTime        @updatedAt
  PasswordToken PasswordToken[]
  RefreshToken  RefreshToken[]
  carts         Cart[]
  purchases     Sales[]
  payments      Payments[]
  auditLogs     AuditLog[]
  notifications Notification[]
  pushTokens    PushToken[]
  preferences   NotificationPreference?

  @@unique([tenant_id, email])
  @@index([email, phone])
}

model PasswordToken {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tokenHash String   @unique
  user_id   String   @db.Uuid
  user      User     @relation(fields: [user_id], references: [id])
  tenant_id String   @db.Uuid
  tenant    Tenant   @relation(fields: [tenant_id], references: [id])
  expiresAt DateTime
  used      Boolean  @default(false)
  createdAt DateTime @default(now())

  @@unique([tenant_id, user_id])
}

enum ProductStatus {
  Available
  OutOfStock
  Discontinued
}

model Product {
  id                String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  title             String
  description       String             @db.Text
  owner             Tenant             @relation(fields: [tenant_id], references: [id])
  tenant_id         String             @db.Uuid
  attributes        Json?              @db.Json
  quantity          Float?             @default(0) @db.Real
  price             Float              @default(0.00) @db.DoublePrecision
  variation         Boolean?           @default(false)
  status            ProductStatus?     @default(Available)
  isBundle          Boolean            @default(false)
  min_items         Int?               @default(1)
  max_items         Int?               @default(1)
  // If it's a bundle, these are the items available to be picked
  bundleComponents  ProductComponent[] @relation("ParentProduct")
  // If it's an item that can be put IN a bundle
  asComponent       ProductComponent[] @relation("ChildProduct")
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
  productVariations ProductVariation[]
  cartItems         CartItems[]

  @@unique([tenant_id, title])
  @@index([title])
}

// Logic for Gift Boxes/Catering: "Pick 3 items from this list"
model ProductComponent {
  id              String  @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  parentProduct   Product @relation("ParentProduct", fields: [parent_id], references: [id])
  parent_id       String  @db.Uuid
  childProduct    Product @relation("ChildProduct", fields: [child_id], references: [id])
  child_id        String  @db.Uuid
  additionalPrice Float   @default(0.00) @db.DoublePrecision
}

enum VariationTypes {
  Color
  Size
  Others
}

model ProductVariation {
  id         String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  product    Product        @relation(fields: [product_id], references: [id])
  product_id String         @db.Uuid
  type       VariationTypes
  value      String
  quantity   Float?         @default(0) @db.Real
  price      Float          @default(0.00) @db.DoublePrecision
  createdAt  DateTime       @default(now())
  updatedAt  DateTime       @updatedAt
  cartItems  CartItems[]
}

model Discount {
  id         String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  title      String
  tenant     Tenant   @relation(fields: [tenant_id], references: [id])
  tenant_id  String   @db.Uuid
  percentage Float    @default(0.00) @db.DoublePrecision
  active     Boolean  @default(false)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

model CartItems {
  id               String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  item             Product           @relation(fields: [product_id], references: [id])
  product_id       String            @db.Uuid
  cart             Cart              @relation(fields: [cart_id], references: [id])
  cart_id          String            @db.Uuid
  product_quantity Float             @default(0) @db.Real
  value            Float             @default(0.00) @db.DoublePrecision
  unit_price       Float             @default(0.00) @db.DoublePrecision
  variation        ProductVariation? @relation(fields: [variation_id], references: [id])
  variation_id     String?           @db.Uuid
  parent_item_id   String?           @db.Uuid
  parentItem       CartItems?        @relation("BundleSelection", fields: [parent_item_id], references: [id])
  childItems       CartItems[]       @relation("BundleSelection")
  createdAt        DateTime          @default(now())
  updatedAt        DateTime          @updatedAt

  @@index([cart_id])
}

enum CartStatus {
  Active
  Abandoned
  Checkedout
}

enum DeliveryType {
  PICKUP
  DELIVERY
  SHIPPING
}

model Cart {
  id              String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  customer        User         @relation(fields: [user_id], references: [id])
  user_id         String       @db.Uuid
  tenant          Tenant       @relation(fields: [tenant_id], references: [id])
  tenant_id       String       @db.Uuid
  cartItems       CartItems[]
  totalValue      Float        @default(0.00) @db.DoublePrecision
  status          CartStatus?  @default(Active)
  notes           String?      @db.Text
  recipientName   String?
  recipientPhone  String?
  deliveryAddress String?      @db.Text
  deliveryType    DeliveryType @default(PICKUP)
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt
  sales           Sales?

  @@index([user_id, tenant_id])
}

enum DeliveryStatus {
  PENDING
  PREPARING
  OUT_FOR_DELIVERY
  DELIVERED
  FAILED
}

model Delivery {
  id               String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  sales            Sales          @relation(fields: [sales_id], references: [id])
  sales_id         String         @unique @db.Uuid
  tenant           Tenant         @relation(fields: [tenant_id], references: [id])
  tenant_id        String         @db.Uuid
  address          String
  recipientName    String
  recipientPhone   String
  status           DeliveryStatus @default(PENDING)
  trackingNumber   String?        @unique
  estimatedArrival DateTime?
  notes            String?
  createdAt        DateTime       @default(now())
  updatedAt        DateTime       @updatedAt
}

model RefreshToken {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  token     String   @unique
  userId    String   @db.Uuid
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  revoked   Boolean? @default(false)
  expiresAt DateTime
  createdAt DateTime @default(now())
}

enum SalesStatus {
  Delivered
  Paid
  Returned
  Cancelled
}

model Sales {
  id        String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  cart      Cart         @relation(fields: [cart_id], references: [id])
  cart_id   String       @unique @db.Uuid
  amount    Float        @default(0.00) @db.DoublePrecision
  status    SalesStatus? @default(Paid)
  tenant    Tenant       @relation(fields: [tenant_id], references: [id])
  tenant_id String       @db.Uuid
  paidBy    User         @relation(fields: [user_id], references: [id])
  user_id   String       @db.Uuid
  createdAt DateTime     @default(now())
  updatedAt DateTime     @updatedAt
  payments  Payments?
  delivery  Delivery?
}

enum PaymentChannels {
  Card
  Transfer
  Cash
  Other
}

enum PaymentStatus {
  Success
  Failed
  Pending
}

model Payments {
  id                     String           @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  channel                PaymentChannels?
  amount                 Float            @default(0.00) @db.DoublePrecision
  status                 PaymentStatus?
  reference              String?
  finecoreReference      String?
  finecoreTransactionRef String?
  authType               String?
  requiresAuth           Boolean          @default(false)
  paidBy                 User             @relation(fields: [user_id], references: [id])
  user_id                String           @db.Uuid
  paidTo                 Tenant           @relation(fields: [tenant_id], references: [id])
  tenant_id              String           @db.Uuid
  paidFor                Sales            @relation(fields: [sales_id], references: [id])
  sales_id               String           @unique @db.Uuid
  createdAt              DateTime         @default(now())
  updatedAt              DateTime         @updatedAt
}

enum Role {
  OWNER
  ADMIN
  USER
  SUPER_ADMIN
}

enum TenantStatus {
  ACTIVE
  SUSPENDED
  EXPIRED
  DELETED
  OUTDATED
  ABANDONED
}

enum SubscriberStatus {
  ACTIVE
  UNSUBSCRIBED
  BOUNCED
}

enum CampaignStatus {
  DRAFT
  SCHEDULED
  SENDING
  SENT
  FAILED
}

enum EmailSendStatus {
  PENDING
  SENT
  FAILED
}

enum ProjectStatus {
  ACTIVE
  ARCHIVED
  DELETED
}

model Project {
  id          String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant      Tenant        @relation(fields: [tenant_id], references: [id])
  tenant_id   String        @db.Uuid
  name        String
  description String?
  status      ProjectStatus @default(ACTIVE)
  settings    Json?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@index([tenant_id])
}

enum AuditAction {
  CREATE
  UPDATE
  DELETE
  LOGIN
  LOGOUT
  INVITE
  REMOVE
  TRANSFER
}

enum AuditEntityType {
  USER
  PRODUCT
  ORDER
  PAYMENT
  SETTINGS
  TEAM
  PROJECT
}

model AuditLog {
  id         String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant     Tenant          @relation(fields: [tenant_id], references: [id])
  tenant_id  String          @db.Uuid
  user       User?           @relation(fields: [user_id], references: [id])
  user_id    String?         @db.Uuid
  action     AuditAction
  entityType AuditEntityType
  entityId   String?
  details    Json?
  ipAddress  String?
  userAgent  String?
  createdAt  DateTime        @default(now())

  @@index([tenant_id])
  @@index([user_id])
  @@index([entityType])
}

model TeamInvite {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant    Tenant   @relation(fields: [tenant_id], references: [id])
  tenant_id String   @db.Uuid
  email     String
  role      Role     @default(USER)
  token     String   @unique
  invitedBy String   @db.Uuid
  accepted  Boolean  @default(false)
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@unique([tenant_id, email])
}

model TenantSettings {
  id                      String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant                  Tenant   @relation(fields: [tenant_id], references: [id])
  tenant_id               String   @unique @db.Uuid
  storeName               String?
  storeLogo               String?
  storeDescription        String?
  contactEmail            String?
  contactPhone            String?
  address                 String?
  timezone                String   @default("Africa/Lagos")
  currency                String   @default("NGN")
  taxRate                 Float    @default(0.00)
  notificationPreferences Json?
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt
}

enum NotificationType {
  EMAIL
  PUSH
  SMS
  IN_APP
}

enum NotificationPriority {
  LOW
  NORMAL
  HIGH
  URGENT
}

enum NotificationStatus {
  PENDING
  SENT
  FAILED
  READ
}

model NotificationTemplate {
  id          String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant      Tenant   @relation(fields: [tenant_id], references: [id])
  tenant_id   String   @db.Uuid
  name        String
  type        NotificationType
  subject     String?
  body        String
  variables   Json?
  active      Boolean  @default(true)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@unique([tenant_id, name])
  @@index([tenant_id])
}

model Notification {
  id          String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  tenant      Tenant              @relation(fields: [tenant_id], references: [id])
  tenant_id   String              @db.Uuid
  user        User?               @relation(fields: [user_id], references: [id])
  user_id     String?             @db.Uuid
  type        NotificationType
  priority    NotificationPriority @default(NORMAL)
  title       String
  body        String
  data        Json?
  status      NotificationStatus  @default(PENDING)
  sentAt      DateTime?
  readAt      DateTime?
  createdAt   DateTime            @default(now())
  updatedAt   DateTime           @updatedAt

  @@index([tenant_id])
  @@index([user_id])
  @@index([status])
}

model PushToken {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  user      User     @relation(fields: [user_id], references: [id])
  user_id   String   @db.Uuid
  token     String
  platform  String
  active    Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([user_id, token])
}

model NotificationPreference {
  id                 String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  user               User     @relation(fields: [user_id], references: [id])
  user_id            String   @unique @db.Uuid
  emailNotifications Boolean  @default(true)
  pushNotifications  Boolean  @default(true)
  smsNotifications   Boolean  @default(false)
  inAppNotifications Boolean  @default(true)
  notifyOnSale      Boolean  @default(true)
  notifyOnPayment    Boolean  @default(true)
  notifyOnLowStock   Boolean  @default(true)
  notifyOnNewUser    Boolean  @default(true)
  notifyOnCampaign   Boolean  @default(true)
  quietHoursStart   String?
  quietHoursEnd     String?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
}
