//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Tenant {
  id String [pk]
  name String [not null]
  domain String [unique, not null]
  apiKey String [unique, not null]
  status TenantStatus [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  users User [not null]
  PasswordToken PasswordToken [not null]
  products Product [not null]
  sales Sales [not null]
  carts Cart [not null]
  discounts Discount [not null]
  revenue Payments [not null]
  deliveries Delivery [not null]
  tenantEmailConfig TenantEmailConfig
  tenantFinecoreConfig TenantFinecoreConfig
  subscribers Subscriber [not null]
  lists List [not null]
  campaigns Campaign [not null]
  emailSends EmailSend [not null]
  projects Project [not null]
  auditLogs AuditLog [not null]
  teamInvites TeamInvite [not null]
  settings TenantSettings
  notifications Notification [not null]
  notificationTemplates NotificationTemplate [not null]
}

Table TenantFinecoreConfig {
  id String [pk]
  apiKey String [not null]
  publicKey String
  webhookSecret String
  environment String [not null, default: 'sandbox']
  tenant_id String [unique, not null]
  tenant Tenant [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table TenantEmailConfig {
  id String [pk]
  fromName String [not null]
  fromEmail String [not null]
  smtpHost String [not null]
  smtpPort Int [not null]
  smtpUser String [not null]
  smtpPass String [not null]
  tenant_id String [unique, not null]
  tenant Tenant [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Subscriber {
  id String [pk]
  tenant_id String [not null]
  email String [not null]
  name String
  status SubscriberStatus [not null, default: 'ACTIVE']
  createdAt DateTime [default: `now()`, not null]
  tenant Tenant [not null]
  lists ListSubscriber [not null]
  sends EmailSend [not null]

  indexes {
    (tenant_id, email) [unique]
  }
}

Table List {
  id String [pk]
  tenant_id String [not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  tenant Tenant [not null]
  subscribers ListSubscriber [not null]
}

Table ListSubscriber {
  listId String [not null]
  subscriberId String [not null]
  list List [not null]
  subscriber Subscriber [not null]

  indexes {
    (listId, subscriberId) [pk]
  }
}

Table Campaign {
  id String [pk]
  tenant_id String [not null]
  subject String [not null]
  htmlBody String [not null]
  textBody String
  status CampaignStatus [not null, default: 'DRAFT']
  scheduledAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tenant Tenant [not null]
  sends EmailSend [not null]
}

Table EmailSend {
  id String [pk]
  tenant_id String [not null]
  campaignId String [not null]
  subscriberId String [not null]
  status EmailSendStatus [not null, default: 'PENDING']
  error String
  sentAt DateTime
  tenant Tenant [not null]
  campaign Campaign [not null]
  subscriber Subscriber [not null]

  indexes {
    (campaignId, subscriberId) [unique]
  }
}

Table User {
  id String [pk]
  tenant_id String [not null]
  tenant Tenant [not null]
  email String [not null]
  name String
  password String [not null]
  phone String
  role Role [not null, default: 'USER']
  agreed Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  PasswordToken PasswordToken [not null]
  RefreshToken RefreshToken [not null]
  carts Cart [not null]
  purchases Sales [not null]
  payments Payments [not null]
  auditLogs AuditLog [not null]
  notifications Notification [not null]
  pushTokens PushToken [not null]
  preferences NotificationPreference

  indexes {
    (tenant_id, email) [unique]
  }
}

Table PasswordToken {
  id String [pk]
  tokenHash String [unique, not null]
  user_id String [not null]
  user User [not null]
  tenant_id String [not null]
  tenant Tenant [not null]
  expiresAt DateTime [not null]
  used Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (tenant_id, user_id) [unique]
  }
}

Table Product {
  id String [pk]
  title String [not null]
  description String [not null]
  owner Tenant [not null]
  tenant_id String [not null]
  attributes Json
  quantity Float [default: 0]
  price Float [not null, default: 0]
  variation Boolean [default: false]
  status ProductStatus [default: 'Available']
  isBundle Boolean [not null, default: false]
  min_items Int [default: 1]
  max_items Int [default: 1]
  bundleComponents ProductComponent [not null]
  asComponent ProductComponent [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  productVariations ProductVariation [not null]
  cartItems CartItems [not null]

  indexes {
    (tenant_id, title) [unique]
  }
}

Table ProductComponent {
  id String [pk]
  parentProduct Product [not null]
  parent_id String [not null]
  childProduct Product [not null]
  child_id String [not null]
  additionalPrice Float [not null, default: 0]
}

Table ProductVariation {
  id String [pk]
  product Product [not null]
  product_id String [not null]
  type VariationTypes [not null]
  value String [not null]
  quantity Float [default: 0]
  price Float [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  cartItems CartItems [not null]
}

Table Discount {
  id String [pk]
  title String [not null]
  tenant Tenant [not null]
  tenant_id String [not null]
  percentage Float [not null, default: 0]
  active Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CartItems {
  id String [pk]
  item Product [not null]
  product_id String [not null]
  cart Cart [not null]
  cart_id String [not null]
  product_quantity Float [not null, default: 0]
  value Float [not null, default: 0]
  unit_price Float [not null, default: 0]
  variation ProductVariation
  variation_id String
  parent_item_id String
  parentItem CartItems
  childItems CartItems [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Cart {
  id String [pk]
  customer User [not null]
  user_id String [not null]
  tenant Tenant [not null]
  tenant_id String [not null]
  cartItems CartItems [not null]
  totalValue Float [not null, default: 0]
  status CartStatus [default: 'Active']
  notes String
  recipientName String
  recipientPhone String
  deliveryAddress String
  deliveryType DeliveryType [not null, default: 'PICKUP']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sales Sales
}

Table Delivery {
  id String [pk]
  sales Sales [not null]
  sales_id String [unique, not null]
  tenant Tenant [not null]
  tenant_id String [not null]
  address String [not null]
  recipientName String [not null]
  recipientPhone String [not null]
  status DeliveryStatus [not null, default: 'PENDING']
  trackingNumber String [unique]
  estimatedArrival DateTime
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table RefreshToken {
  id String [pk]
  token String [unique, not null]
  userId String [not null]
  user User [not null]
  revoked Boolean [default: false]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Sales {
  id String [pk]
  cart Cart [not null]
  cart_id String [unique, not null]
  amount Float [not null, default: 0]
  status SalesStatus [default: 'Paid']
  tenant Tenant [not null]
  tenant_id String [not null]
  paidBy User [not null]
  user_id String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  payments Payments
  delivery Delivery
}

Table Payments {
  id String [pk]
  channel PaymentChannels
  amount Float [not null, default: 0]
  status PaymentStatus
  reference String
  finecoreReference String
  finecoreTransactionRef String
  authType String
  requiresAuth Boolean [not null, default: false]
  paidBy User [not null]
  user_id String [not null]
  paidTo Tenant [not null]
  tenant_id String [not null]
  paidFor Sales [not null]
  sales_id String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Project {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [not null]
  name String [not null]
  description String
  status ProjectStatus [not null, default: 'ACTIVE']
  settings Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table AuditLog {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [not null]
  user User
  user_id String
  action AuditAction [not null]
  entityType AuditEntityType [not null]
  entityId String
  details Json
  ipAddress String
  userAgent String
  createdAt DateTime [default: `now()`, not null]
}

Table TeamInvite {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [not null]
  email String [not null]
  role Role [not null, default: 'USER']
  token String [unique, not null]
  invitedBy String [not null]
  accepted Boolean [not null, default: false]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (tenant_id, email) [unique]
  }
}

Table TenantSettings {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [unique, not null]
  storeName String
  storeLogo String
  storeDescription String
  contactEmail String
  contactPhone String
  address String
  timezone String [not null, default: 'Africa/Lagos']
  currency String [not null, default: 'NGN']
  taxRate Float [not null, default: 0]
  notificationPreferences Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NotificationTemplate {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [not null]
  name String [not null]
  type NotificationType [not null]
  subject String
  body String [not null]
  variables Json
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (tenant_id, name) [unique]
  }
}

Table Notification {
  id String [pk]
  tenant Tenant [not null]
  tenant_id String [not null]
  user User
  user_id String
  type NotificationType [not null]
  priority NotificationPriority [not null, default: 'NORMAL']
  title String [not null]
  body String [not null]
  data Json
  status NotificationStatus [not null, default: 'PENDING']
  sentAt DateTime
  readAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table PushToken {
  id String [pk]
  user User [not null]
  user_id String [not null]
  token String [not null]
  platform String [not null]
  active Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (user_id, token) [unique]
  }
}

Table NotificationPreference {
  id String [pk]
  user User [not null]
  user_id String [unique, not null]
  emailNotifications Boolean [not null, default: true]
  pushNotifications Boolean [not null, default: true]
  smsNotifications Boolean [not null, default: false]
  inAppNotifications Boolean [not null, default: true]
  notifyOnSale Boolean [not null, default: true]
  notifyOnPayment Boolean [not null, default: true]
  notifyOnLowStock Boolean [not null, default: true]
  notifyOnNewUser Boolean [not null, default: true]
  notifyOnCampaign Boolean [not null, default: true]
  quietHoursStart String
  quietHoursEnd String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum ProductStatus {
  Available
  OutOfStock
  Discontinued
}

Enum VariationTypes {
  Color
  Size
  Others
}

Enum CartStatus {
  Active
  Abandoned
  Checkedout
}

Enum DeliveryType {
  PICKUP
  DELIVERY
  SHIPPING
}

Enum DeliveryStatus {
  PENDING
  PREPARING
  OUT_FOR_DELIVERY
  DELIVERED
  FAILED
}

Enum SalesStatus {
  Delivered
  Paid
  Returned
  Cancelled
}

Enum PaymentChannels {
  Card
  Transfer
  Cash
  Other
}

Enum PaymentStatus {
  Success
  Failed
  Pending
}

Enum Role {
  OWNER
  ADMIN
  USER
  SUPER_ADMIN
}

Enum TenantStatus {
  ACTIVE
  SUSPENDED
  EXPIRED
  DELETED
  OUTDATED
  ABANDONED
}

Enum SubscriberStatus {
  ACTIVE
  UNSUBSCRIBED
  BOUNCED
}

Enum CampaignStatus {
  DRAFT
  SCHEDULED
  SENDING
  SENT
  FAILED
}

Enum EmailSendStatus {
  PENDING
  SENT
  FAILED
}

Enum ProjectStatus {
  ACTIVE
  ARCHIVED
  DELETED
}

Enum AuditAction {
  CREATE
  UPDATE
  DELETE
  LOGIN
  LOGOUT
  INVITE
  REMOVE
  TRANSFER
}

Enum AuditEntityType {
  USER
  PRODUCT
  ORDER
  PAYMENT
  SETTINGS
  TEAM
  PROJECT
}

Enum NotificationType {
  EMAIL
  PUSH
  SMS
  IN_APP
}

Enum NotificationPriority {
  LOW
  NORMAL
  HIGH
  URGENT
}

Enum NotificationStatus {
  PENDING
  SENT
  FAILED
  READ
}

Ref: TenantFinecoreConfig.tenant_id - Tenant.id

Ref: TenantEmailConfig.tenant_id - Tenant.id

Ref: Subscriber.tenant_id > Tenant.id

Ref: List.tenant_id > Tenant.id

Ref: ListSubscriber.listId > List.id [delete: Cascade]

Ref: ListSubscriber.subscriberId > Subscriber.id [delete: Cascade]

Ref: Campaign.tenant_id > Tenant.id

Ref: EmailSend.tenant_id > Tenant.id

Ref: EmailSend.campaignId > Campaign.id

Ref: EmailSend.subscriberId > Subscriber.id

Ref: User.tenant_id > Tenant.id

Ref: PasswordToken.user_id > User.id

Ref: PasswordToken.tenant_id > Tenant.id

Ref: Product.tenant_id > Tenant.id

Ref: ProductComponent.parent_id > Product.id

Ref: ProductComponent.child_id > Product.id

Ref: ProductVariation.product_id > Product.id

Ref: Discount.tenant_id > Tenant.id

Ref: CartItems.product_id > Product.id

Ref: CartItems.cart_id > Cart.id

Ref: CartItems.variation_id > ProductVariation.id

Ref: CartItems.parent_item_id - CartItems.id

Ref: Cart.user_id > User.id

Ref: Cart.tenant_id > Tenant.id

Ref: Delivery.sales_id - Sales.id

Ref: Delivery.tenant_id > Tenant.id

Ref: RefreshToken.userId > User.id [delete: Cascade]

Ref: Sales.cart_id - Cart.id

Ref: Sales.tenant_id > Tenant.id

Ref: Sales.user_id > User.id

Ref: Payments.user_id > User.id

Ref: Payments.tenant_id > Tenant.id

Ref: Payments.sales_id - Sales.id

Ref: Project.tenant_id > Tenant.id

Ref: AuditLog.tenant_id > Tenant.id

Ref: AuditLog.user_id > User.id

Ref: TeamInvite.tenant_id > Tenant.id

Ref: TenantSettings.tenant_id - Tenant.id

Ref: NotificationTemplate.tenant_id > Tenant.id

Ref: Notification.tenant_id > Tenant.id

Ref: Notification.user_id > User.id

Ref: PushToken.user_id > User.id

Ref: NotificationPreference.user_id - User.id